--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll=false --coverage --CI=true"
+    "test": "jest --watchAll=false --coverage --CI=true",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -35,6 +36,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.6.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -44,6 +46,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.0",
     "msw": "^2.0.9",
+    "nock": "^13.4.0",
+    "node-fetch": "^3.3.2",
     "react-hooks": "^1.0.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
